添加文档说明，删除不必要的文件，优化

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BiaoChenXuYing 的个人博客网站</title>
-    <meta name="keywords" content="BiaoChenXuYing,全栈程序员的成长之路">
-    <meta name="description" content="微信公众号：BiaoChenXuYing
+    <meta name="keywords" content="BiaoChenXuYing">
+    <meta name="description" content="加班到天明，学习到昏厥 ！！！
+微信公众号：BiaoChenXuYing
 分享 WEB 全栈开发等相关的技术文章，热点资源，全栈程序员的成长之路。">
     <style lang="css">
         body {
@@ -50,6 +50,10 @@
             color: rgb(155, 35, 35);
             text-decoration: none;
             margin-bottom: 30px;
+            font-size: 40px;
+        }
+        .link:hover{
+            color: rgb(231, 17, 17);
         }
         
         @keyframes mylogo
@@ -97,10 +101,10 @@
     <canvas id="sakura"></canvas>
     <div class="content">
         <div class="user">
-            <img src="img/userLogo.jpeg">
+            <a class="link" href="http://biaochenxuying.cn"><img src="img/userLogo.jpeg"></a>
         </div>
         <div class="content-body">
-            <a class="link" href="/"> 首页 </a>
+            <a class="link" href="http://biaochenxuying.cn"> 首页 </a>
             <div class="logion"> 加班到天明，学习到昏厥 ！！！ </div>
             <div class="introduce"> 程序员不止眼前的逻辑和代码，还有底层的框架和架构。 </div>
         </div>
